; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display.c_intel_update_pipe_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display.c_intel_update_pipe_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_crtc_state = type { i32, i32, %struct.TYPE_6__, %struct.TYPE_5__ }
%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { i32, i32 }
%struct.intel_crtc = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }
%struct.drm_i915_private = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_crtc_state*, %struct.intel_crtc_state*)* @intel_update_pipe_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intel_update_pipe_config(%struct.intel_crtc_state* %0, %struct.intel_crtc_state* %1) #0 {
  %3 = alloca %struct.intel_crtc_state*, align 8
  %4 = alloca %struct.intel_crtc_state*, align 8
  %5 = alloca %struct.intel_crtc*, align 8
  %6 = alloca %struct.drm_i915_private*, align 8
  store %struct.intel_crtc_state* %0, %struct.intel_crtc_state** %3, align 8
  store %struct.intel_crtc_state* %1, %struct.intel_crtc_state** %4, align 8
  %7 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %4, align 8
  %8 = getelementptr inbounds %struct.intel_crtc_state, %struct.intel_crtc_state* %7, i32 0, i32 3
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = call %struct.intel_crtc* @to_intel_crtc(i32 %10)
  store %struct.intel_crtc* %11, %struct.intel_crtc** %5, align 8
  %12 = load %struct.intel_crtc*, %struct.intel_crtc** %5, align 8
  %13 = getelementptr inbounds %struct.intel_crtc, %struct.intel_crtc* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call %struct.drm_i915_private* @to_i915(i32 %15)
  store %struct.drm_i915_private* %16, %struct.drm_i915_private** %6, align 8
  %17 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %4, align 8
  %18 = getelementptr inbounds %struct.intel_crtc_state, %struct.intel_crtc_state* %17, i32 0, i32 3
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.intel_crtc*, %struct.intel_crtc** %5, align 8
  %22 = getelementptr inbounds %struct.intel_crtc, %struct.intel_crtc* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  store i32 %20, i32* %23, align 4
  %24 = load %struct.intel_crtc*, %struct.intel_crtc** %5, align 8
  %25 = getelementptr inbounds %struct.intel_crtc, %struct.intel_crtc* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @PIPESRC(i32 %26)
  %28 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %4, align 8
  %29 = getelementptr inbounds %struct.intel_crtc_state, %struct.intel_crtc_state* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = sub nsw i32 %30, 1
  %32 = shl i32 %31, 16
  %33 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %4, align 8
  %34 = getelementptr inbounds %struct.intel_crtc_state, %struct.intel_crtc_state* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = sub nsw i32 %35, 1
  %37 = or i32 %32, %36
  %38 = call i32 @I915_WRITE(i32 %27, i32 %37)
  %39 = load %struct.drm_i915_private*, %struct.drm_i915_private** %6, align 8
  %40 = call i32 @INTEL_GEN(%struct.drm_i915_private* %39)
  %41 = icmp sge i32 %40, 9
  br i1 %41, label %42, label %54

42:                                               ; preds = %2
  %43 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %4, align 8
  %44 = call i32 @skl_detach_scalers(%struct.intel_crtc_state* %43)
  %45 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %4, align 8
  %46 = getelementptr inbounds %struct.intel_crtc_state, %struct.intel_crtc_state* %45, i32 0, i32 2
  %47 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %53

50:                                               ; preds = %42
  %51 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %4, align 8
  %52 = call i32 @skylake_pfit_enable(%struct.intel_crtc_state* %51)
  br label %53

53:                                               ; preds = %50, %42
  br label %79

54:                                               ; preds = %2
  %55 = load %struct.drm_i915_private*, %struct.drm_i915_private** %6, align 8
  %56 = call i64 @HAS_PCH_SPLIT(%struct.drm_i915_private* %55)
  %57 = icmp ne i64 %56, 0
  br i1 %57, label %58, label %78

58:                                               ; preds = %54
  %59 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %4, align 8
  %60 = getelementptr inbounds %struct.intel_crtc_state, %struct.intel_crtc_state* %59, i32 0, i32 2
  %61 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %60, i32 0, i32 0
  %62 = load i64, i64* %61, align 8
  %63 = icmp ne i64 %62, 0
  br i1 %63, label %64, label %67

64:                                               ; preds = %58
  %65 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %4, align 8
  %66 = call i32 @ironlake_pfit_enable(%struct.intel_crtc_state* %65)
  br label %77

67:                                               ; preds = %58
  %68 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %3, align 8
  %69 = getelementptr inbounds %struct.intel_crtc_state, %struct.intel_crtc_state* %68, i32 0, i32 2
  %70 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %69, i32 0, i32 0
  %71 = load i64, i64* %70, align 8
  %72 = icmp ne i64 %71, 0
  br i1 %72, label %73, label %76

73:                                               ; preds = %67
  %74 = load %struct.intel_crtc_state*, %struct.intel_crtc_state** %3, align 8
  %75 = call i32 @ironlake_pfit_disable(%struct.intel_crtc_state* %74)
  br label %76

76:                                               ; preds = %73, %67
  br label %77

77:                                               ; preds = %76, %64
  br label %78

78:                                               ; preds = %77, %54
  br label %79

79:                                               ; preds = %78, %53
  %80 = load %struct.drm_i915_private*, %struct.drm_i915_private** %6, align 8
  %81 = call i32 @INTEL_GEN(%struct.drm_i915_private* %80)
  %82 = icmp sge i32 %81, 11
  br i1 %82, label %83, label %86

83:                                               ; preds = %79
  %84 = load %struct.intel_crtc*, %struct.intel_crtc** %5, align 8
  %85 = call i32 @icl_set_pipe_chicken(%struct.intel_crtc* %84)
  br label %86

86:                                               ; preds = %83, %79
  ret void
}

declare dso_local %struct.intel_crtc* @to_intel_crtc(i32) #1

declare dso_local %struct.drm_i915_private* @to_i915(i32) #1

declare dso_local i32 @I915_WRITE(i32, i32) #1

declare dso_local i32 @PIPESRC(i32) #1

declare dso_local i32 @INTEL_GEN(%struct.drm_i915_private*) #1

declare dso_local i32 @skl_detach_scalers(%struct.intel_crtc_state*) #1

declare dso_local i32 @skylake_pfit_enable(%struct.intel_crtc_state*) #1

declare dso_local i64 @HAS_PCH_SPLIT(%struct.drm_i915_private*) #1

declare dso_local i32 @ironlake_pfit_enable(%struct.intel_crtc_state*) #1

declare dso_local i32 @ironlake_pfit_disable(%struct.intel_crtc_state*) #1

declare dso_local i32 @icl_set_pipe_chicken(%struct.intel_crtc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
